--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,9 @@ coverage
 # Compiled binary addons (http://nodejs.org/api/addons.html)
 build
 Release
+*.sln
+*.vcxproj
+*.filters
 
 # Dependency directory
 # Commenting this out is preferred by some people, see
