--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "lmdb-queue",
   "description": "An embed, kafka like queue.",
-  "version": "0.1.2",
+  "version": "0.2.0",
   "repository": "https://github.com/talrasha007/lmdb-queue.git",
   "dependencies": {
-    "nan": "~1.8.4"
+    "nan": "~2.6.2",
+    "nnu": "~0.1.7"
   },
   "main": "lib/index.js"
 }
